fix: button hover in dark mode

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -22,5 +22,9 @@
     font-weight: 600;
     margin: 0;
     padding: 0;
+
+    &.button_title_hover_dark {
+      color: #fff; // Define dark hover color
+    }
   }
 }
